[gd_scene load_steps=14 format=3 uid="uid://ckoelvk7ocqdp"]

[ext_resource type="Script" uid="uid://4ke1ixxydpm2" path="res://Main.gd" id="2_qdjwj"]
[ext_resource type="Script" uid="uid://6jpahk8667fl" path="res://CameraController.gd" id="3_rsdaa"]
[ext_resource type="Script" uid="uid://r66t3fdjskjs" path="res://HUDController.gd" id="4_kr5ul"]
[ext_resource type="Texture2D" uid="uid://ca2eygog0jy3n" path="res://assets/otherflagtest.png" id="4_wtva4"]
[ext_resource type="Texture2D" uid="uid://8j7pyfgrf322" path="res://assets/water_128px.png" id="9_2h1s5"]
[ext_resource type="PackedScene" uid="uid://6m37eo4vu10a" path="res://unit.tscn" id="9_7ffpw"]
[ext_resource type="Texture2D" uid="uid://cn6o3au8veppb" path="res://assets/selectbox.png" id="18_oggwp"]

[sub_resource type="LabelSettings" id="LabelSettings_wuh61"]
font_size = 23
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8kvbf"]
font_size = 17
outline_size = 1
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.560784)

[sub_resource type="LabelSettings" id="LabelSettings_pm5ym"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mb5gn"]
font_size = 31
shadow_size = 0

[sub_resource type="LabelSettings" id="LabelSettings_uvybh"]
font_size = 26
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bf3um"]
size = Vector2(5114, 3245)

[node name="Root" type="Node2D"]
script = ExtResource("2_qdjwj")
unitScene = ExtResource("9_7ffpw")

[node name="MainCam" type="Camera2D" parent="."]
script = ExtResource("3_rsdaa")

[node name="BgControl" type="Control" parent="MainCam"]
z_index = -100
layout_mode = 3
anchors_preset = 0
offset_right = 1170.0
offset_bottom = 682.0
mouse_filter = 1
mouse_force_pass_scroll_events = false
metadata/_edit_lock_ = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("4_kr5ul")

[node name="ReinforcementUI" type="Control" parent="HUD"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
metadata/_edit_lock_ = true

[node name="ButtonAnchor" type="HBoxContainer" parent="HUD/ReinforcementUI"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = 16.0
offset_right = 1152.0
offset_bottom = 88.0
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ReinforcementLabel" type="Label" parent="HUD/ReinforcementUI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -131.0
offset_top = 40.0
offset_right = 129.0
offset_bottom = 72.0
grow_horizontal = 2
text = "REINFORCEMENTS: 999"
label_settings = SubResource("LabelSettings_wuh61")
horizontal_alignment = 1

[node name="TopPanel" type="ColorRect" parent="HUD"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
color = Color(0.343931, 0.183065, 0.0750184, 1)
metadata/_edit_lock_ = true

[node name="Flag" type="TextureRect" parent="HUD/TopPanel"]
layout_mode = 0
offset_top = 1.0
offset_right = 44.0
offset_bottom = 30.0
texture = ExtResource("4_wtva4")
expand_mode = 3

[node name="NameLabel" type="Label" parent="HUD/TopPanel"]
layout_mode = 0
offset_left = 49.0
offset_top = 3.0
offset_right = 318.0
offset_bottom = 27.0
text = "United States of America"
label_settings = SubResource("LabelSettings_8kvbf")
autowrap_mode = 2

[node name="TurnsUntilReinforceLabel" type="Label" parent="HUD/TopPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -113.5
offset_right = 113.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Turns until reinforcement: 99"

[node name="TurnLabel" type="Label" parent="HUD/TopPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -11.5
offset_right = -21.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "Turn: 999"

[node name="TopPanelExtra" type="TextureRect" parent="HUD"]
offset_top = 31.0
offset_right = 249.0
offset_bottom = 80.0
texture = ExtResource("9_2h1s5")
expand_mode = 1
stretch_mode = 1
metadata/_edit_lock_ = true

[node name="ImportantLabel" type="Label" parent="HUD/TopPanelExtra"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Important Tiles: 100"
label_settings = SubResource("LabelSettings_pm5ym")

[node name="Button" type="Button" parent="HUD"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 173.0
offset_bottom = 15.5
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Toggle Control View"

[node name="TileInfo" type="ColorRect" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -359.0
offset_top = -148.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
color = Color(0.259294, 0.259294, 0.259294, 1)
metadata/_edit_lock_ = true

[node name="PosLabel" type="Label" parent="HUD/TileInfo"]
layout_mode = 0
offset_left = 7.0
offset_top = 32.0
offset_right = 47.0
offset_bottom = 55.0
text = "(0,0)"

[node name="TerrainLabel" type="Label" parent="HUD/TileInfo"]
layout_mode = 0
offset_left = 7.0
offset_top = 55.0
offset_right = 133.0
offset_bottom = 78.0
text = "Hills, Forest"

[node name="FactionLabel" type="Label" parent="HUD/TileInfo"]
layout_mode = 0
offset_left = 8.0
offset_top = 2.0
offset_right = 312.0
offset_bottom = 26.0
text = "United States of America"

[node name="MoveCostLabel" type="Label" parent="HUD/TileInfo"]
layout_mode = 0
offset_left = 8.0
offset_top = 78.0
offset_right = 185.0
offset_bottom = 101.0
text = "Movement cost: "

[node name="Flag" type="TextureRect" parent="HUD/TileInfo"]
layout_mode = 0
offset_left = 296.0
offset_top = 6.0
offset_right = 353.0
offset_bottom = 44.0
texture = ExtResource("4_wtva4")
expand_mode = 3

[node name="UnitInfo" type="ColorRect" parent="HUD"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -148.0
offset_right = 359.0
grow_vertical = 0
size_flags_horizontal = 8
color = Color(0.259294, 0.259294, 0.259294, 1)
metadata/_edit_lock_ = true

[node name="UnitTypeLabel" type="Label" parent="HUD/UnitInfo"]
layout_mode = 0
offset_left = 8.0
offset_top = 5.0
offset_right = 71.0
offset_bottom = 28.0
text = "Infantry
"

[node name="HealthBar" type="ProgressBar" parent="HUD/UnitInfo"]
modulate = Color(0, 1, 0.0588235, 1)
layout_mode = 0
offset_left = 197.0
offset_top = 5.0
offset_right = 355.0
offset_bottom = 32.0
step = 0.1
value = 100.0
show_percentage = false

[node name="MovementLabel" type="Label" parent="HUD/UnitInfo"]
layout_mode = 0
offset_left = 7.0
offset_top = 42.0
offset_right = 108.0
offset_bottom = 65.0
text = "Movement: 3"

[node name="Button2" type="Button" parent="HUD"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -54.0
offset_right = 85.0
offset_bottom = -23.0
grow_vertical = 2
size_flags_horizontal = 0
text = "Next Turn"

[node name="CombatPanel" type="ColorRect" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -199.0
offset_top = -148.0
offset_right = 199.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.258824, 0.258824, 0.258824, 1)
metadata/_edit_lock_ = true

[node name="AttackerLabel" type="Label" parent="HUD/CombatPanel"]
layout_mode = 0
offset_left = 62.0
offset_top = 6.0
offset_right = 182.0
offset_bottom = 29.0
text = "ATTACKERRRRR"

[node name="DefenderFlag" type="TextureRect" parent="HUD/CombatPanel"]
layout_mode = 0
offset_left = 341.0
offset_right = 398.0
offset_bottom = 38.0
texture = ExtResource("4_wtva4")
expand_mode = 3

[node name="AttackerFlag" type="TextureRect" parent="HUD/CombatPanel"]
layout_mode = 0
offset_right = 57.0
offset_bottom = 38.0
texture = ExtResource("4_wtva4")
expand_mode = 3

[node name="DefenderLabel" type="Label" parent="HUD/CombatPanel"]
layout_mode = 0
offset_left = 212.0
offset_top = 6.0
offset_right = 335.0
offset_bottom = 29.0
text = "DEFENDERRRRR"
horizontal_alignment = 2

[node name="AttackerHealthBarHigh" type="ProgressBar" parent="HUD/CombatPanel"]
modulate = Color(0, 1, 0.0588235, 1)
layout_mode = 0
offset_top = 38.0
offset_right = 26.0
offset_bottom = 148.0
step = 0.1
value = 17.4
fill_mode = 3
show_percentage = false

[node name="AttackerHealthBarLow" type="ProgressBar" parent="HUD/CombatPanel"]
modulate = Color(0, 1, 0.0588235, 1)
layout_mode = 0
offset_left = 26.0
offset_top = 38.0
offset_right = 52.0
offset_bottom = 148.0
step = 0.1
value = 17.4
fill_mode = 3
show_percentage = false

[node name="AttackerDamageLabel" type="Label" parent="HUD/CombatPanel"]
layout_mode = 0
offset_left = 68.0
offset_top = 55.0
offset_right = 148.0
offset_bottom = 99.0
text = "0-100"
label_settings = SubResource("LabelSettings_mb5gn")

[node name="DefenderHealthBarHigh" type="ProgressBar" parent="HUD/CombatPanel"]
modulate = Color(0, 1, 0.0588235, 1)
layout_mode = 0
offset_left = 372.0
offset_top = 38.0
offset_right = 398.0
offset_bottom = 148.0
step = 0.1
value = 17.4
fill_mode = 3
show_percentage = false

[node name="DefenderHealthBarLow" type="ProgressBar" parent="HUD/CombatPanel"]
modulate = Color(0, 1, 0.0588235, 1)
layout_mode = 0
offset_left = 346.0
offset_top = 38.0
offset_right = 372.0
offset_bottom = 148.0
step = 0.1
value = 17.4
fill_mode = 3
show_percentage = false

[node name="DefenderDamageLabel" type="Label" parent="HUD/CombatPanel"]
layout_mode = 0
offset_left = 243.0
offset_top = 55.0
offset_right = 324.0
offset_bottom = 99.0
text = "0-100"
label_settings = SubResource("LabelSettings_mb5gn")

[node name="AdvantageLabel" type="Label" parent="HUD/CombatPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -47.0
offset_right = 98.0
offset_bottom = -11.0
grow_horizontal = 2
grow_vertical = 0
text = "DISADVANTAGE"
label_settings = SubResource("LabelSettings_uvybh")
horizontal_alignment = 1

[node name="Label" type="Label" parent="HUD/CombatPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -71.0
offset_top = 32.0
offset_right = 71.0
offset_bottom = 55.0
grow_horizontal = 2
text = "Projected Damage"

[node name="MapContainer" type="Node2D" parent="."]

[node name="SelectBox" type="NinePatchRect" parent="."]
visible = false
texture = ExtResource("18_oggwp")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="ClickHandler" type="Area2D" parent="."]
scale = Vector2(2, 2)
metadata/_edit_lock_ = true

[node name="Collider" type="CollisionShape2D" parent="ClickHandler"]
position = Vector2(1622, 1048.5)
scale = Vector2(2, 2)
shape = SubResource("RectangleShape2D_bf3um")
metadata/_edit_lock_ = true

[connection signal="combat_panel_data" from="." to="HUD" method="_on_root_combat_panel_data"]
[connection signal="hover_data" from="." to="HUD" method="_on_root_hover_data"]
[connection signal="next_turn" from="." to="HUD" method="_on_root_next_turn"]
[connection signal="set_reinforcement_count_ui" from="." to="HUD" method="_on_root_set_reinforcement_count_ui"]
[connection signal="set_reinforcement_ui" from="." to="HUD" method="_on_root_set_reinforcement_ui"]
[connection signal="unit_info_data" from="." to="HUD" method="_on_root_unit_info_data"]
[connection signal="update_top_panel" from="." to="HUD" method="_on_root_update_top_panel"]
[connection signal="pressed" from="HUD/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HUD/Button2" to="." method="_on_button_2_pressed"]
[connection signal="input_event" from="ClickHandler" to="." method="_on_click_handler_input_event"]
